Use @BeforeClass and @Before.